--- a/content/W15.html
+++ b/content/W15.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27<br /><h1>W15</h1>
+    <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <a href='W16.html'>Next</a> >> W16<br /><h1>W15</h1>
 <p>W15取分項目1由我負責，證據於<a href="https://youtu.be/WbbXqoTKe8I">6/4號小組討論</a>中的meet文字討論欄中</p>
 <p>影片1</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/IKOGwoJ2HLk" title="YouTube video player" width="560"></iframe></p>
@@ -256,7 +256,7 @@ img.add_border {
 <p>Y 平方等於這個特定的覆數<br/>表達。所以我可以用和代替它</p>
 <p>做一些簡化，我最終得到這個<br/>Q1 的表達式稍微簡單一些。和</p>
 <p>這是我得到的相同表達<br/>上一節中的幾何方法。</p>
-<br />W14 << <a href='W14.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27</div>
+<br />W14 << <a href='W14.html'>Previous</a> <a href='W16.html'>Next</a> >> W16</div>
         
     <!-- footer -->
       <div class="container">
