--- a/content/W16.html
+++ b/content/W16.html
@@ -133,124 +133,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">首頁 << <a href='首頁.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>W5</h1>
-<table height="557" style="width: 216px;">
-<tbody>
-<tr style="height: 14px;">
-<td style="height: 14px; width: 82.3864px;"><span>組別(乙班)</span></td>
-<td style="height: 14px; width: 117.841px;"><span>時間</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">1</td>
-<td style="height: 13px; width: 117.841px;">07:14</td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">2</td>
-<td style="height: 13px; width: 117.841px;">01:55</td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">3</td>
-<td style="height: 13px; width: 117.841px;">01:55</td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">4</td>
-<td style="height: 13px; width: 117.841px;">02:51</td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">5</td>
-<td style="height: 13px; width: 117.841px;"><span>03:00</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">6</td>
-<td style="height: 13px; width: 117.841px;"><span>03:07</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">7</td>
-<td style="height: 13px; width: 117.841px;"><span>02:47</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">8</td>
-<td style="height: 13px; width: 117.841px;"><span>03:25</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">9</td>
-<td style="height: 13px; width: 117.841px;"><span>02:43</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">10</td>
-<td style="height: 13px; width: 117.841px;"><span>02:20</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">11</td>
-<td style="height: 13px; width: 117.841px;"><span>01:38</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">12</td>
-<td style="height: 13px; width: 117.841px;"><span>01:47</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">13</td>
-<td style="height: 13px; width: 117.841px;"><span>02:09</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">14</td>
-<td style="height: 13px; width: 117.841px;"><span>05:58</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">15</td>
-<td style="height: 13px; width: 117.841px;"><span>03:24</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">16</td>
-<td style="height: 13px; width: 117.841px;"><span>03:33</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">17</td>
-<td style="height: 13px; width: 117.841px;"><span>04:33</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">18</td>
-<td style="height: 13px; width: 117.841px;"><span>05:03</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">19</td>
-<td style="height: 13px; width: 117.841px;"><span>03:11</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">20</td>
-<td style="height: 13px; width: 117.841px;"><span>03:32</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">21</td>
-<td style="height: 13px; width: 117.841px;"><span>05:02</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">22</td>
-<td style="height: 13px; width: 117.841px;"><span>04:46</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">23</td>
-<td style="height: 13px; width: 117.841px;"><span>02:55</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">24</td>
-<td style="height: 13px; width: 117.841px;"><span>05:00</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">25</td>
-<td style="height: 13px; width: 117.841px;"><span>04:53</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">26</td>
-<td style="height: 13px; width: 117.841px;">00:00</td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">27</td>
-<td style="height: 13px; width: 117.841px;"><span>03:43</span></td>
-</tr>
-</tbody>
-</table>
-<br />首頁 << <a href='首頁.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
+    <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27<br /><h1>W16</h1>
+<h4>本周取分項目</h4>
+<h4>MTB_robot 的取放方塊流程規劃 (Process Planning):</h4>
+<h4>1. Onshape 零組件繪製 (20%)</h4>
+<p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
+<h4>2. 建立 CoppeliaSim 4.1.0 MTB robot 場景 (20%)</h4>
+<p>請以自行繪製之零件輸入 CoppeliaSim 後, 組合為 MTB robot 模型, 並利用 Leo Editor 以 require 導入 Lua 程式運作, 分別控制各軸轉動示範, 所完成的所有檔案請存入 W16_exam 後壓縮為 W16_exam.7z 後送至個人 @gm 帳號下的 Google Drive 後將連結設為任何人皆可下載, 並將連結與操作嵌入影片放在 W16 頁面與回報區中 .</p>
+<h4>3. 手臂末端加入 components-gripper-suction pad 吸盤 (20%)</h4>
+<p>請接續上述 MTB robot, 在其末端接上 force sensor 後接上標準 suction pad 後, 分別導入 W15 週線上課程之鍵盤控制程式後, 拍攝影片示範 W15 線上課程中之操作與示範過程.</p>
+<h4>4. 逆向運動學函式 (20%)</h4>
+<p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
+<h4>5. Python remote API 逆向運動學函式 (20%)</h4>
+<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
+<br />W15 << <a href='W15.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27</div>
         
     <!-- footer -->
       <div class="container">
