--- a/content/W16.html
+++ b/content/W16.html
@@ -135,7 +135,9 @@ img.add_border {
         </header>
     <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27<br /><h1>W16</h1>
 <h4>本周取分項目</h4>
-<h4>MTB_robot 的取放方塊流程規劃 (Process Planning):</h4>
+<p></p>
+<p><a href="https://cad.onshape.com/documents/2bb180e3cbfd2e4dc3688ff8/w/075507e9c48214bd412d878b/e/4f8e851ed924f3803d7a99d60">W16 Onshape</a></p>
+<p>MTB_robot 的取放方塊流程規劃 (Process Planning):</p>
 <h4>1. Onshape 零組件繪製 (20%)</h4>
 <p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
 <h4>2. 建立 CoppeliaSim 4.1.0 MTB robot 場景 (20%)</h4>
@@ -145,8 +147,7 @@ img.add_border {
 <h4>4. 逆向運動學函式 (20%)</h4>
 <p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <h4>5. Python remote API 逆向運動學函式 (20%)</h4>
-<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
-<br />W15 << <a href='W15.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27</div>
+<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p><br />W15 << <a href='W15.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27</div>
         
     <!-- footer -->
       <div class="container">
