分組作業補完

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -475,7 +475,9 @@
 <p>這是我得到的相同表達<br/>上一節中的幾何方法。</p>
 <h1>W16</h1>
 <h4>本周取分項目</h4>
-<h4>MTB_robot 的取放方塊流程規劃 (Process Planning):</h4>
+<p></p>
+<p><a href="https://cad.onshape.com/documents/2bb180e3cbfd2e4dc3688ff8/w/075507e9c48214bd412d878b/e/4f8e851ed924f3803d7a99d60">W16 Onshape</a></p>
+<p>MTB_robot 的取放方塊流程規劃 (Process Planning):</p>
 <h4>1. Onshape 零組件繪製 (20%)</h4>
 <p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
 <h4>2. 建立 CoppeliaSim 4.1.0 MTB robot 場景 (20%)</h4>
@@ -485,8 +487,7 @@
 <h4>4. 逆向運動學函式 (20%)</h4>
 <p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <h4>5. Python remote API 逆向運動學函式 (20%)</h4>
-<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
-<h1>stage1-bg27</h1>
+<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p><h1>stage1-bg27</h1>
 <p>此次分組中我是組長，由另一個人進行繪圖模擬，我於其繪圖中進行討論哪裡需要修改，而我則負責處理網頁，做報告，報告等。因此圖及模擬除了在分組網頁中，應該要由另一人放入自己網頁中。</p>
 <p>因認知錯誤，我只做了pdf，其他東西都放在<a href="https://40823233.github.io/stage1-bg27/content/index.html" rel="nofollow">網頁</a>中。</p>
 <p><a href="https://github.com/40823233/stage1-bg27/blob/main/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage1-bg27.pdf">PDF</a></p>
