--- a/content/index.html
+++ b/content/index.html
@@ -134,8 +134,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='W5.html'>Next</a> >> W5<br /><h1>首頁</h1>
-<p>2021/6/18 第十七周 更新</p>
-<p>嘗試補完W16</p>
+<p>2021/6/21 第十八周 更新</p>
+<p>嘗試補全分組的東西</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>分組:</p>
 <p>W2-W4 (3 Weeks): 二人一組，組長是我</p>
