--- a/content/stage3-bg7.html
+++ b/content/stage3-bg7.html
@@ -134,6 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>stage3-bg7</h1>
+<p>題目延續stage2-bg8的內容，繼續往後進行。</p>
 <p>本次分組組員</p>
 <p><a href="https://40623144.github.io/cd2021">40623144</a></p>
 <p><a href="https://40823233.github.io/cd2021">40823233</a></p>
@@ -141,8 +142,7 @@ img.add_border {
 <p><a href="https://40823241.github.io/cd2021">40823241</a></p>
 <p><a href="https://40423155.github.io/cd2021">40423155</a></p>
 <p><a href="https://40823227.github.io/cd2021">40823227</a></p>
-<p><a href="https://s40723233.github.io/cd2021">40723233</a></p>
-<br />stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫</div>
+<p><a href="https://s40723233.github.io/cd2021">40723233</a></p><br />stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫</div>
         
     <!-- footer -->
       <div class="container">
