--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,6 @@
 <h1>首頁</h1>
-<p>2021/6/21 第十八周 更新</p>
-<p>嘗試補全分組的東西</p>
+<p>2021/6/24 第十八周 更新</p>
+<p>補全+細節調整。</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>分組:</p>
 <p>W2-W4 (3 Weeks): 二人一組，組長是我</p>
@@ -9,8 +9,7 @@
 <p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
 <p>W10-W18 (9 Weeks): 八人一組，組長:<a class="commit-author user-mention" href="https://github.com/40623144/stage3-bg7" title="View all commits by 40623144">40623144</a></p>
 <p><a href="https://40623144.github.io/stage3-bg7/content/index.html">組別網頁</a></p>
-<p></p>
-<h1>W5</h1>
+<p></p><h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
 <tr style="height: 14px;">
@@ -477,6 +476,8 @@
 <h4>本周取分項目</h4>
 <p></p>
 <p><a href="https://cad.onshape.com/documents/2bb180e3cbfd2e4dc3688ff8/w/075507e9c48214bd412d878b/e/4f8e851ed924f3803d7a99d60">W16 Onshape</a></p>
+<p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="/40823233/cd2021/raw/main/downloads/W16/W16.ttt" id="raw-url" role="button"> 2、3項</a></p>
+<p>4、5項嘗試補完中(6/24)</p>
 <p>MTB_robot 的取放方塊流程規劃 (Process Planning):</p>
 <h4>1. Onshape 零組件繪製 (20%)</h4>
 <p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
@@ -487,16 +488,15 @@
 <h4>4. 逆向運動學函式 (20%)</h4>
 <p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <h4>5. Python remote API 逆向運動學函式 (20%)</h4>
-<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
-<h1>stage1-bg27</h1>
-<p>此次分組中我是組長，由另一個人進行繪圖模擬，我於其繪圖中進行討論哪裡需要修改，而我則負責處理網頁，做報告，報告等。因此圖及模擬除了在分組網頁中，應該要由另一人放入自己網頁中。</p>
-<p>因認知錯誤，我只做了pdf，其他東西都放在<a href="https://40823233.github.io/stage1-bg27/content/index.html" rel="nofollow">網頁</a>中。</p>
+<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p><h1>stage1-bg27</h1>
+<p>此次分組中我是組長，我們兩個思考了很久，最終決定以這個來進行，由另一個人進行繪圖模擬，我於繪圖中進行討論哪裡需要修改，而我則負責處理網頁，做報告，報告等。</p>
+<p>因為一些情況，我只做了pdf，其他東西都放在<a href="https://40823233.github.io/stage1-bg27/content/index.html" rel="nofollow">網頁</a>中。</p>
 <p><a href="https://github.com/40823233/stage1-bg27/blob/main/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage1-bg27.pdf">PDF</a></p>
 <p>其餘內容於報告中口頭描述。</p>
-<p><a href="https://www.youtube.com/watch?v=jTRdW8yr590">模擬影片</a></p><h1>stage2-bg8</h1>
+<p>小組的<a href="https://www.youtube.com/watch?v=jTRdW8yr590">模擬影片</a></p><h1>stage2-bg8</h1>
 <p>第二次分組組長為40623144</p>
 <p>我負責做<a href="https://40623144.github.io/stage2-bg8/reveal/index.html#/">reveal</a>及分組部分頁面的調整。</p>
-<p>以及最後繳交的<a href="https://github.com/40623144/stage2-bg8/blob/48291746e0626f55a2de1a32d20037018e2ebdf1/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage2-bg8.pdf">PDF</a>及<a href="https://www.youtube.com/watch?v=FecxkBLTXnc">模擬影片</a>上傳<img alt="" height="87" src="/images/40823233.png" width="300"/></p>
+<p>以及最後繳交的<a href="https://github.com/40623144/stage2-bg8/blob/48291746e0626f55a2de1a32d20037018e2ebdf1/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage2-bg8.pdf">PDF</a> <img alt="" height="87" src="/images/40823233.png" width="300"/></p>
 <p><a class="pl-3 pr-3 py-3 p-md-0 mt-n3 mb-n3 mr-n3 m-md-0 Link--primary no-underline no-wrap" data-pjax="" href="https://github.com/40623144/stage2-bg8/commits/main"><span class="d-none d-sm-inline"><span aria-label="Commits on main" class="color-text-secondary d-none d-lg-inline">commits</span></span></a>可以證明我所做的事情。</p>
 <p>較為可惜的是報告當時繪圖的人不在，緊急之下跳過許多關於繪圖的部分，導致報告的很爛。</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/FecxkBLTXnc" title="YouTube video player" width="560"></iframe></p><h1>stage3-bg7</h1>
