--- a/content/首頁.html
+++ b/content/首頁.html
@@ -134,8 +134,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='W5.html'>Next</a> >> W5<br /><h1>首頁</h1>
-<p>2021/6/21 第十八周 更新</p>
-<p>嘗試補全分組的東西</p>
+<p>2021/6/24 第十八周 更新</p>
+<p>補全+細節調整。</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>分組:</p>
 <p>W2-W4 (3 Weeks): 二人一組，組長是我</p>
@@ -144,8 +144,7 @@ img.add_border {
 <p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
 <p>W10-W18 (9 Weeks): 八人一組，組長:<a class="commit-author user-mention" href="https://github.com/40623144/stage3-bg7" title="View all commits by 40623144">40623144</a></p>
 <p><a href="https://40623144.github.io/stage3-bg7/content/index.html">組別網頁</a></p>
-<p></p>
-<br /> <a href='W5.html'>Next</a> >> W5</div>
+<p></p><br /> <a href='W5.html'>Next</a> >> W5</div>
         
     <!-- footer -->
       <div class="container">
