--- a/content/W16.html
+++ b/content/W16.html
@@ -138,7 +138,9 @@ img.add_border {
 <p></p>
 <p><a href="https://cad.onshape.com/documents/2bb180e3cbfd2e4dc3688ff8/w/075507e9c48214bd412d878b/e/4f8e851ed924f3803d7a99d60">W16 Onshape</a></p>
 <p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com//40823233/cd2021/raw/main/downloads/W16/W16.ttt" id="raw-url" role="button"> 2、3項</a></p>
-<p>4、5項嘗試補完中(6/24)</p>
+<p>參考<a href="https://github.com/40823233/cd2021/blob/main/downloads/W16/W16.lua">程式</a></p>
+<p>https://github.com/40823233/cd2021/blob/main/downloads/W16/W16.lua</p>
+<p>4、5項嘗試補完中(6/24) </p>
 <p>MTB_robot 的取放方塊流程規劃 (Process Planning):</p>
 <h4>1. Onshape 零組件繪製 (20%)</h4>
 <p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
