--- a/content/stage2-bg8.html
+++ b/content/stage2-bg8.html
@@ -134,6 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">stage1-bg27 << <a href='stage1-bg27.html'>Previous</a> <a href='stage3-bg7.html'>Next</a> >> stage3-bg7<br /><h1>stage2-bg8</h1>
+<p><a href="https://40623144.github.io/stage2-bg8/index.html">網站</a></p>
 <p>第二次分組組長為40623144</p>
 <p>我負責做<a href="https://40623144.github.io/stage2-bg8/reveal/index.html#/">reveal</a>及分組部分頁面的調整。</p>
 <p>以及最後繳交的<a href="https://github.com/40623144/stage2-bg8/blob/48291746e0626f55a2de1a32d20037018e2ebdf1/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage2-bg8.pdf">PDF</a> <img alt="" height="87" src="./../images/40823233.png" width="300"/></p>
