--- a/content/stage3-bg7.html
+++ b/content/stage3-bg7.html
@@ -134,6 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>stage3-bg7</h1>
+<p><a href="https://40623144.github.io/stage3-bg7/index.html">網站</a></p>
 <p>題目延續stage2-bg8的內容，繼續往後進行。</p>
 <p>本次分組組員</p>
 <p><a href="https://40623144.github.io/cd2021">40623144</a></p>
