--- a/config/content.htm
+++ b/config/content.htm
@@ -495,13 +495,15 @@
 <p>因為一些情況，我只做了pdf，其他東西都放在<a href="https://40823233.github.io/stage1-bg27/content/index.html" rel="nofollow">網頁</a>中。</p>
 <p><a href="https://github.com/40823233/stage1-bg27/blob/main/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage1-bg27.pdf">PDF</a></p>
 <p>其餘內容於報告中口頭描述。</p>
-<p>小組的<a href="https://www.youtube.com/watch?v=jTRdW8yr590">模擬影片</a></p><h1>stage2-bg8</h1>
+<p>小組的<a href="https://www.youtube.com/watch?v=jTRdW8yr590">模擬影片</a></p>
+<p>STL檔沒有留存，也許另一個組員還留著。</p><h1>stage2-bg8</h1>
 <p><a href="https://40623144.github.io/stage2-bg8/index.html">網站</a></p>
 <p>第二次分組組長為40623144</p>
 <p>我負責做<a href="https://40623144.github.io/stage2-bg8/reveal/index.html#/">reveal</a>及分組部分頁面的調整。</p>
 <p>以及最後繳交的<a href="https://github.com/40623144/stage2-bg8/blob/48291746e0626f55a2de1a32d20037018e2ebdf1/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage2-bg8.pdf">PDF</a> <img alt="" height="87" src="/images/40823233.png" width="300"/></p>
 <p><a class="pl-3 pr-3 py-3 p-md-0 mt-n3 mb-n3 mr-n3 m-md-0 Link--primary no-underline no-wrap" data-pjax="" href="https://github.com/40623144/stage2-bg8/commits/main"><span class="d-none d-sm-inline"><span aria-label="Commits on main" class="color-text-secondary d-none d-lg-inline">commits</span></span></a>可以證明我所做的事情。</p>
 <p>較為可惜的是報告當時繪圖的人不在，緊急之下跳過許多關於繪圖的部分，導致報告的很爛。</p>
+<p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com/40823233/cd2021/blob/main/downloads/Stage2-bg8.stl" id="raw-url" role="button"> 檔案下載 </a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/FecxkBLTXnc" title="YouTube video player" width="560"></iframe></p><h1>stage3-bg7</h1>
 <p><a href="https://40623144.github.io/stage3-bg7/index.html">網站</a></p>
 <p>題目延續stage2-bg8的內容，繼續往後進行。</p>
