--- a/content/stage1-bg27.html
+++ b/content/stage1-bg27.html
@@ -138,7 +138,8 @@ img.add_border {
 <p>因為一些情況，我只做了pdf，其他東西都放在<a href="https://40823233.github.io/stage1-bg27/content/index.html" rel="nofollow">網頁</a>中。</p>
 <p><a href="https://github.com/40823233/stage1-bg27/blob/main/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage1-bg27.pdf">PDF</a></p>
 <p>其餘內容於報告中口頭描述。</p>
-<p>小組的<a href="https://www.youtube.com/watch?v=jTRdW8yr590">模擬影片</a></p><br />W16 << <a href='W16.html'>Previous</a> <a href='stage2-bg8.html'>Next</a> >> stage2-bg8</div>
+<p>小組的<a href="https://www.youtube.com/watch?v=jTRdW8yr590">模擬影片</a></p>
+<p>STL檔沒有留存，也許另一個組員還留著。</p><br />W16 << <a href='W16.html'>Previous</a> <a href='stage2-bg8.html'>Next</a> >> stage2-bg8</div>
         
     <!-- footer -->
       <div class="container">
