--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -503,9 +503,14 @@
 <p>以及最後繳交的<a href="https://github.com/40623144/stage2-bg8/blob/48291746e0626f55a2de1a32d20037018e2ebdf1/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage2-bg8.pdf">PDF</a> <img alt="" height="87" src="/images/40823233.png" width="300"/></p>
 <p><a class="pl-3 pr-3 py-3 p-md-0 mt-n3 mb-n3 mr-n3 m-md-0 Link--primary no-underline no-wrap" data-pjax="" href="https://github.com/40623144/stage2-bg8/commits/main"><span class="d-none d-sm-inline"><span aria-label="Commits on main" class="color-text-secondary d-none d-lg-inline">commits</span></span></a>可以證明我所做的事情。</p>
 <p>較為可惜的是報告當時繪圖的人不在，緊急之下跳過許多關於繪圖的部分，導致報告的很爛。</p>
+<p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com/40823233/cd2021/blob/main/downloads/Stage2-bg8.stl" id="raw-url" role="button"> 檔案下載 </a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/FecxkBLTXnc" title="YouTube video player" width="560"></iframe></p><h1>stage3-bg7</h1>
 <p><a href="https://40623144.github.io/stage3-bg7/index.html">網站</a></p>
 <p>題目延續stage2-bg8的內容，繼續往後進行。</p>
+<p>本次組件外觀以及我做的部分。</p>
+<p><img alt="" height="285" src="/images/整體外觀.png" width="500"/></p>
+<p><img alt="" height="239" src="/images/氣孔1.png" width="500"/></p>
+<p><img alt="" height="248" src="/images/氣孔2.png" width="500"/></p>
 <p>本次分組組員</p>
 <p><a href="https://40623144.github.io/cd2021">40623144</a></p>
 <p><a href="https://40823233.github.io/cd2021">40823233</a></p>
