--- a/content/stage3-bg7.html
+++ b/content/stage3-bg7.html
@@ -136,6 +136,10 @@ img.add_border {
     <div id="tipue_search_content">stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>stage3-bg7</h1>
 <p><a href="https://40623144.github.io/stage3-bg7/index.html">網站</a></p>
 <p>題目延續stage2-bg8的內容，繼續往後進行。</p>
+<p>本次組件外觀以及我做的部分。</p>
+<p><img alt="" height="285" src="./../images/整體外觀.png" width="500"/></p>
+<p><img alt="" height="239" src="./../images/氣孔1.png" width="500"/></p>
+<p><img alt="" height="248" src="./../images/氣孔2.png" width="500"/></p>
 <p>本次分組組員</p>
 <p><a href="https://40623144.github.io/cd2021">40623144</a></p>
 <p><a href="https://40823233.github.io/cd2021">40823233</a></p>
