刪除非必要內容

--- a/config/content.htm
+++ b/config/content.htm
@@ -507,20 +507,14 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/FecxkBLTXnc" title="YouTube video player" width="560"></iframe></p><h1>stage3-bg7</h1>
 <p><a href="https://40623144.github.io/stage3-bg7/index.html">網站</a></p>
 <p>題目延續stage2-bg8的內容，繼續往後進行。</p>
-<p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com/40823233/cd2021/blob/main/downloads/stage3-bg7.stl" id="raw-url" role="button"> stage3組件 </a></p>
+<p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com/40823233/cd2021/blob/main/downloads/stage3-bg7.stl" id="raw-url" role="button"> stage3組件</a></p>
+<p>本次我進行找資料、提出問題、實際修改。</p>
 <p>本次組件外觀以及我做的部分。</p>
 <p></p>
 <p><img alt="" height="285" src="/images/整體外觀.png" width="500"/></p>
 <p><img alt="" height="239" src="/images/氣孔1.png" width="500"/></p>
 <p><img alt="" height="248" src="/images/氣孔2.png" width="500"/></p>
-<p>本次分組組員</p>
-<p><a href="https://40623144.github.io/cd2021">40623144</a></p>
-<p><a href="https://40823233.github.io/cd2021">40823233</a></p>
-<p><a href="https://s40723224.github.io/cd2021">40723224</a></p>
-<p><a href="https://40823241.github.io/cd2021">40823241</a></p>
-<p><a href="https://40423155.github.io/cd2021">40423155</a></p>
-<p><a href="https://40823227.github.io/cd2021">40823227</a></p>
-<p><a href="https://s40723233.github.io/cd2021">40723233</a></p><h1>倉庫</h1>
+<p></p><h1>倉庫</h1>
 <p>原始網站刪除的東西還有部分筆記在此</p>
 <p><span>備註:記得前往github自己的帳戶中 seeting/gitgub page裡面將 Branch修改為 master</span></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
