--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -507,7 +507,9 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/FecxkBLTXnc" title="YouTube video player" width="560"></iframe></p><h1>stage3-bg7</h1>
 <p><a href="https://40623144.github.io/stage3-bg7/index.html">網站</a></p>
 <p>題目延續stage2-bg8的內容，繼續往後進行。</p>
+<p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com/40823233/cd2021/blob/main/downloads/stage3-bg7.stl" id="raw-url" role="button"> stage3組件 </a></p>
 <p>本次組件外觀以及我做的部分。</p>
+<p></p>
 <p><img alt="" height="285" src="/images/整體外觀.png" width="500"/></p>
 <p><img alt="" height="239" src="/images/氣孔1.png" width="500"/></p>
 <p><img alt="" height="248" src="/images/氣孔2.png" width="500"/></p>
