期末影片上傳

--- a/content/stage2-bg8.html
+++ b/content/stage2-bg8.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W18.html'>W18</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,8 @@ img.add_border {
 <p><a class="pl-3 pr-3 py-3 p-md-0 mt-n3 mb-n3 mr-n3 m-md-0 Link--primary no-underline no-wrap" data-pjax="" href="https://github.com/40623144/stage2-bg8/commits/main"><span class="d-none d-sm-inline"><span aria-label="Commits on main" class="color-text-secondary d-none d-lg-inline">commits</span></span></a>可以證明我所做的事情。</p>
 <p>較為可惜的是報告當時繪圖的人不在，緊急之下跳過許多關於繪圖的部分，導致報告的很爛。</p>
 <p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com/40823233/cd2021/blob/main/downloads/Stage2-bg8.stl" id="raw-url" role="button"> 檔案下載 </a></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/FecxkBLTXnc" title="YouTube video player" width="560"></iframe></p><br />stage1-bg27 << <a href='stage1-bg27.html'>Previous</a> <a href='stage3-bg7.html'>Next</a> >> stage3-bg7</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/FecxkBLTXnc" title="YouTube video player" width="560"></iframe></p>
+<br />stage1-bg27 << <a href='stage1-bg27.html'>Previous</a> <a href='stage3-bg7.html'>Next</a> >> stage3-bg7</div>
         
     <!-- footer -->
       <div class="container">
