--- a/content/stage1-bg27.html
+++ b/content/stage1-bg27.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W18.html'>W18</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,13 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W16 << <a href='W16.html'>Previous</a> <a href='stage2-bg8.html'>Next</a> >> stage2-bg8<br /><h1>stage1-bg27</h1>
+    <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <a href='stage2-bg8.html'>Next</a> >> stage2-bg8<br /><h1>stage1-bg27</h1>
 <p>此次分組中我是組長，我們兩個思考了很久，最終決定以這個來進行，由另一個人進行繪圖模擬，我於繪圖中進行討論哪裡需要修改，而我則負責處理網頁，做報告，報告等。</p>
 <p>因為一些情況，我只做了pdf，其他東西都放在<a href="https://40823233.github.io/stage1-bg27/content/index.html" rel="nofollow">網頁</a>中。</p>
 <p><a href="https://github.com/40823233/stage1-bg27/blob/main/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage1-bg27.pdf">PDF</a></p>
 <p>其餘內容於報告中口頭描述。</p>
 <p>小組的<a href="https://www.youtube.com/watch?v=jTRdW8yr590">模擬影片</a></p>
-<p>STL檔沒有留存，也許另一個組員還留著。</p><br />W16 << <a href='W16.html'>Previous</a> <a href='stage2-bg8.html'>Next</a> >> stage2-bg8</div>
+<p>STL檔沒有留存，也許另一個組員還留著。</p>
+<br />W18 << <a href='W18.html'>Previous</a> <a href='stage2-bg8.html'>Next</a> >> stage2-bg8</div>
         
     <!-- footer -->
       <div class="container">
