--- a/content/stage3-bg7.html
+++ b/content/stage3-bg7.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W18.html'>W18</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,7 +143,8 @@ img.add_border {
 <p><img alt="" height="285" src="./../images/整體外觀.png" width="500"/></p>
 <p><img alt="" height="239" src="./../images/氣孔1.png" width="500"/></p>
 <p><img alt="" height="248" src="./../images/氣孔2.png" width="500"/></p>
-<p></p><br />stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫</div>
+<p></p>
+<br />stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫</div>
         
     <!-- footer -->
       <div class="container">
