補W17期末影片(測試)

--- a/content/W17.html
+++ b/content/W17.html
@@ -133,124 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">首頁 << <a href='首頁.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>W5</h1>
-<table height="557" style="width: 216px;">
-<tbody>
-<tr style="height: 14px;">
-<td style="height: 14px; width: 82.3864px;"><span>組別(乙班)</span></td>
-<td style="height: 14px; width: 117.841px;"><span>時間</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">1</td>
-<td style="height: 13px; width: 117.841px;">07:14</td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">2</td>
-<td style="height: 13px; width: 117.841px;">01:55</td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">3</td>
-<td style="height: 13px; width: 117.841px;">01:55</td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">4</td>
-<td style="height: 13px; width: 117.841px;">02:51</td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">5</td>
-<td style="height: 13px; width: 117.841px;"><span>03:00</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">6</td>
-<td style="height: 13px; width: 117.841px;"><span>03:07</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">7</td>
-<td style="height: 13px; width: 117.841px;"><span>02:47</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">8</td>
-<td style="height: 13px; width: 117.841px;"><span>03:25</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">9</td>
-<td style="height: 13px; width: 117.841px;"><span>02:43</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">10</td>
-<td style="height: 13px; width: 117.841px;"><span>02:20</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">11</td>
-<td style="height: 13px; width: 117.841px;"><span>01:38</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">12</td>
-<td style="height: 13px; width: 117.841px;"><span>01:47</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">13</td>
-<td style="height: 13px; width: 117.841px;"><span>02:09</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">14</td>
-<td style="height: 13px; width: 117.841px;"><span>05:58</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">15</td>
-<td style="height: 13px; width: 117.841px;"><span>03:24</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">16</td>
-<td style="height: 13px; width: 117.841px;"><span>03:33</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">17</td>
-<td style="height: 13px; width: 117.841px;"><span>04:33</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">18</td>
-<td style="height: 13px; width: 117.841px;"><span>05:03</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">19</td>
-<td style="height: 13px; width: 117.841px;"><span>03:11</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">20</td>
-<td style="height: 13px; width: 117.841px;"><span>03:32</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">21</td>
-<td style="height: 13px; width: 117.841px;"><span>05:02</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">22</td>
-<td style="height: 13px; width: 117.841px;"><span>04:46</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">23</td>
-<td style="height: 13px; width: 117.841px;"><span>02:55</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">24</td>
-<td style="height: 13px; width: 117.841px;"><span>05:00</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">25</td>
-<td style="height: 13px; width: 117.841px;"><span>04:53</span></td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">26</td>
-<td style="height: 13px; width: 117.841px;">00:00</td>
-</tr>
-<tr style="height: 13px;">
-<td style="height: 13px; width: 82.3864px;">27</td>
-<td style="height: 13px; width: 117.841px;"><span>03:43</span></td>
-</tr>
-</tbody>
-</table>
-<br />首頁 << <a href='首頁.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
+    <div id="tipue_search_content">W16 << <a href='W16.html'>Previous</a> <a href='W18.html'>Next</a> >> W18<br /><h1>W17</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/TAA-D4IrgXY" title="YouTube video player" width="560"></iframe></p><br />W16 << <a href='W16.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
         
     <!-- footer -->
       <div class="container">
