--- a/content/W16.html
+++ b/content/W16.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W18.html'>W18</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a><li><a href='W18.html'>W18</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <a href='W18.html'>Next</a> >> W18<br /><h1>W16</h1>
+    <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <a href='W17.html'>Next</a> >> W17<br /><h1>W16</h1>
 <h4>本周取分項目</h4>
 <p></p>
 <p><a href="https://cad.onshape.com/documents/2bb180e3cbfd2e4dc3688ff8/w/075507e9c48214bd412d878b/e/4f8e851ed924f3803d7a99d60">W16 Onshape</a></p>
@@ -152,7 +152,7 @@ img.add_border {
 <p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <h4>5. Python remote API 逆向運動學函式 (20%)</h4>
 <p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
-<br />W15 << <a href='W15.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
+<br />W15 << <a href='W15.html'>Previous</a> <a href='W17.html'>Next</a> >> W17</div>
         
     <!-- footer -->
       <div class="container">
