--- a/content/W16.html
+++ b/content/W16.html
@@ -140,9 +140,11 @@ img.add_border {
 <p><a href="https://cad.onshape.com/documents/e12b5bb274a7d3cb9e1ca490/w/b65b4e7fda2b1b8e3d3f1d95/e/1b8feab877ab9d47edaad5a3">新W16 Onshape</a></p>
 <p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com//40823233/cd2021/raw/main/downloads/W16/W16.ttt" id="raw-url" role="button"> 2、3項</a></p>
 <p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com//40823233/cd2021/raw/main/downloads/W16/新W16.ttt" id="raw-url" role="button"> 新2、3項</a></p>
-<p>參考<a href="https://github.com/40823233/cd2021/blob/main/downloads/W16/W16.lua">程式</a></p>
-<p>https://github.com/40823233/cd2021/blob/main/downloads/W16/W16.lua</p>
-<p>4、5項嘗試補完中(6/24) </p>
+<p>第四項</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/ttE6-TDzQuo" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p>4、5項參考，<a href="https://github.com/40823233/cd2021/blob/main/downloads/W16/W16.lua">程式</a>，組別倉儲<a href="https://40623144.github.io/stage3-bg7/content/week16.html">W16</a></p>
+<p>4、5項嘗試補完中(6/25) </p>
 <p>MTB_robot 的取放方塊流程規劃 (Process Planning):</p>
 <h4>1. Onshape 零組件繪製 (20%)</h4>
 <p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
