--- a/content/W17.html
+++ b/content/W17.html
@@ -134,7 +134,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W16 << <a href='W16.html'>Previous</a> <a href='W18.html'>Next</a> >> W18<br /><h1>W17</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/TAA-D4IrgXY" title="YouTube video player" width="560"></iframe></p><br />W16 << <a href='W16.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/TAA-D4IrgXY" title="YouTube video player" width="560"></iframe></p>
+<br />W16 << <a href='W16.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
         
     <!-- footer -->
       <div class="container">
